trunk/Archive2/ed/1d0a3a06a7255b/main.cpp
template<class>
struct A {};

template<class, class = void>
struct B {};

template<template<class, class=void> class>
struct C {};

int main()
{
    C<A> c;
}